# pypi-delayed-mirror

./: .gitignore  .gitlab-ci.yml  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: mirror_manager.py  validation.py
tests/: __init__.py  test_environment.py  test_locking.py  test_validation.py
